# CalculatorApp

./: CMakeLists.txt  compile_commands.json  main.cpp  run.sh
.cache/clangd/index/: calc.cpp.3E914DAF9F4379B8.idx  calc.cpp.90562B0C84C63661.idx  calc.h.CBED9ACC692C17E4.idx  calc.h.E088576696A5A0F8.idx  main.cpp.42EC27BAE8A1B67E.idx  main.cpp.480D6FA53E3C152A.idx  window.cpp.AF75F61E9C23630F.idx  window.h.922E1DD996B2650A.idx  window.h.D6E07E4409AEDBA4.idx
include/: calc.h  window.h
src/: calc.cpp  window.cpp
